--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -340,7 +340,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
+        <img src="img/bess-container.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>BESS Container Assembly Lines</strong></h2>
