--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -340,7 +340,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines Prismatic Batteries Lines in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Semi Auto Lines Prismatic Batteries Lines in India" title="Semi Auto Lines Prismatic Batteries Lines in India"></a>
+        <a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines Prismatic Batteries Lines in India"><img src="img/prismatic-semi-auto.png" class="card-img-top product-img" alt="Semi Auto Lines Prismatic Batteries Lines in India" title="Semi Auto Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Lines</h5>
@@ -357,7 +357,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
+        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/fully-auto.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Automatic Lines</h5>
