--- a/automatic-lines.html
+++ b/automatic-lines.html
@@ -343,7 +343,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Automatic Lines in India" title="Automatic Lines in India" class="w-100">
+        <img src="img/fully-auto.png" alt="Automatic Lines in India" title="Automatic Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Automatic Lines</strong></h2>
