--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -374,7 +374,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India"></a>
+        <a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines in India"><img src="img/bess-container.png" class="card-img-top product-img" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Container Assembly Lines</h5>
