--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -344,7 +344,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/prismatic-assembley-line.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
+        <img src="img/prismatic-semi-auto.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Semi Auto Lines</strong></h2>
