--- a/lib-separator-lines.html
+++ b/lib-separator-lines.html
@@ -174,7 +174,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="lib-seperator-lines.html" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
+<li class="nav-item mr-0"><a href="lib-separator-lines.html" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
 <li class="nav-item mr-0"><a href="giga-factories.html" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
@@ -184,7 +184,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -284,14 +284,14 @@
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
   <ul>
-<li><a href="lib-seperator-lines.html" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="lib-separator-lines.html" title="LIB Separator Lines">LIB Separator Lines</a></li>
 <li><a href="giga-factories.html" title="Giga Factories">Giga Factories</a></li>
 <li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="belt-separator.html" title="Belt Separator">Belt Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -320,7 +320,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">LIB Seperator Lines</h1>
+<h1 class="title text-white">LIB Separator Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -329,7 +329,7 @@
 <span class="ttm-bread-sep text-white">/</span>
 <a title="Homepage" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">LIB Seperator Lines</span>
+<span class="text-white">LIB Separator Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -341,10 +341,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="LIB Seperator Lines in India" title="LIB Seperator Lines in India" class="w-100">
+        <img src="img/lib-seperator.png" alt="LIB Separator Lines in India" title="LIB Separator Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>LIB Seperator Lines</strong></h2>
+        <h2><strong>LIB Separator Lines</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
