--- a/aluminum-foil.html
+++ b/aluminum-foil.html
@@ -341,7 +341,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Aluminum Foil in India" title="Aluminum Foil in India" class="w-100">
+        <img src="img/aluminum-foil.png" alt="Aluminum Foil in India" title="Aluminum Foil in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Aluminum Foil</strong></h2>
