--- a/copper-foil.html
+++ b/copper-foil.html
@@ -343,7 +343,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Copper Foil in India" title="Copper Foil in India" class="w-100">
+        <img src="img/copper-foil.png" alt="Copper Foil in India" title="Copper Foil in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Copper Foil</strong></h2>
