--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -346,7 +346,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="copper-foil.html" title="Copper Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
+        <a href="copper-foil.html" title="Copper Foil in India"><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
@@ -362,7 +362,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="aluminum-foil.html" title="Aluminum Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
+        <a href="aluminum-foil.html" title="Aluminum Foil in India"><img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
