--- a/solar-cell-production-lines.html
+++ b/solar-cell-production-lines.html
@@ -333,7 +333,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Solar PV" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Solar Cell Production Lines</span>
 </div>  
