--- a/solar-panel-production-lines.html
+++ b/solar-panel-production-lines.html
@@ -324,7 +324,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Solar PV" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Solar Panel Production Lines </span>
