--- a/aluminum-foil.html
+++ b/aluminum-foil.html
@@ -327,7 +327,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
+<a title="Lithium Cell Lines" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Aluminum Foil</span>
 </div>  
