--- a/copper-foil.html
+++ b/copper-foil.html
@@ -329,7 +329,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
+<a title="Lithium Cell Lines" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Copper Foil</span>
 </div>  
