--- a/welding-machines.html
+++ b/welding-machines.html
@@ -329,9 +329,9 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="cylindrical-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
+<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Welding Machines</span>
