--- a/raw-materials.html
+++ b/raw-materials.html
@@ -362,7 +362,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-glass.html" title="Solar Glass in India"><img src="img/solar-plant.png" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
+        <a href="solar-glass.html" title="Solar Glass in India"><img src="img/solar-glass.png" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Glass</h5>
