--- a/solar-glass.html
+++ b/solar-glass.html
@@ -350,7 +350,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/solar-plant.png" alt="Solar Glass in India" title="Solar Glass in India" class="w-100">
+        <img src="img/solar-glass.png" alt="Solar Glass in India" title="Solar Glass in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Solar Glass</strong></h2>
