--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -345,13 +345,67 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/assembly-line.png" alt="Turnkey Assembly Lines in India" title="Turnkey Assembly Lines in India" class="w-100">
+        <img src="img/turnkey-assembly-lines.png" alt="Turnkey Assembly Lines in India" title="Turnkey Assembly Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Turnkey Assembly Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+        <h2><strong>Turnkey Assembly Lines</strong></h2> <br>
+        <p>
+        At <strong>Indygreen Technologies</strong>, we specialize in delivering complete turnkey solutions for cylindrical battery pack manufacturing plants, offering end-to-end systems that ensure seamless integration and reliable performance. Our expertise spans the entire battery pack formation process, from cell testing and sorting to welding, BMS integration, sleeve lamination, and final battery testing. Each stage is supported by advanced automation technologies designed to enhance precision, efficiency, and scalability. <br>
+        We provide both automated and semi-automated machines that cater to diverse production requirements, ensuring consistent quality control and high throughput. With a deep understanding of lithium-ion battery technology, Indygreen Technologies empowers manufacturers to establish efficient, cost-effective, and future-ready production lines. <br>
+        Our turnkey solutions include design consultation, equipment supply, installation, commissioning, and operator training, ensuring clients achieve optimal operational performance from day one. We also offer customizable plant layouts tailored to specific capacity goals and space constraints.
+    </p>
     </div>
 </div>
+<div class="application-section">
+
+    <h2>Complete Process Flow</h2>
+    <ul>
+        <li><strong>Cell Testing –</strong> Accurate evaluation of cell capacity, voltage, and internal resistance to ensure quality performance.</li>
+        <li><strong>Sticker Pasting –</strong> Automatic label application for easy identification and traceability.</li>
+        <li><strong>IR Sorting –</strong> Intelligent sorting based on internal resistance values to maintain pack uniformity.</li>
+        <li><strong>Polarity Detection –</strong> Automated detection and correction of cell polarity for safe assembly.</li>
+        <li><strong>Welding –</strong> High-precision spot welding or laser welding for strong electrical and mechanical connections.</li>
+        <li><strong>BMS Testing & Installation –</strong> Integration and functional testing of the Battery Management System for optimal safety and performance.</li>
+        <li><strong>Sleeve Lamination –</strong> Protective sleeve application for insulation and enhanced pack durability.</li>
+        <li><strong>Battery Testing –</strong> Final performance, capacity, and safety tests to ensure reliable output before dispatch.</li>
+    </ul>
+</div>
+<div class="app">
+      <h2>Applications</h2>
+    <p>Our cylindrical battery packs are designed for a wide range of <strong>industrial and consumer applications</strong>, including:</p>
+    <div class="app-sec col-lg-12">
+      <div class="application-sec col-lg-6">
+      <ul>
+    <li>Power Tools</li>
+    <li>Power Banks</li>
+    <li>Drones</li>
+    <li>E-Bikes & E-Scooters</li>
+    <li>Solar Street Lights</li>
+    <li>Medical Devices</li>
+    <li>UPS Systems</li>
+    <li>Toys & Hobby Devices</li>
+    <li>Agricultural Equipment</li>
+    <li>Portable Energy Storage Units</li>
+    <li>IoT Devices</li>
+    <li>Electric Boats and Small Vehicles</li>
+    </ul>
+    </div>
+    <div class="app-image col-lg-6">
+      <img src="img/turnkey-applications.jpeg" alt="">
+    </div>
+    </div>
+</div>
+<div class="why-choose">
+  <h2>Why Choose Indygreen Technologies?</h2>
+  <ul>
+    <li>End-to-end turnkey plant setup and integration</li>
+    <li>Automated and semi-automated machine solutions</li>
+    <li>Technical expertise in lithium battery production</li>
+    <li>Customizable plant design based on client requirements</li>
+    <li>Reliable after-sales support and training</li>
+  </ul>
+</div>
+
 </div>
 
   <!-- Footer -->
