--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -347,7 +347,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/stinger.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
+        <img src="img/fully-auto.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Fully Auto Lines</strong></h2>
