--- a/solar-panel-production-lines.html
+++ b/solar-panel-production-lines.html
@@ -358,7 +358,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
+        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Fully Auto Lines</h5>
@@ -375,7 +375,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
+        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Tabber Stringers</h5>
