--- a/tabber-stringer.html
+++ b/tabber-stringer.html
@@ -348,7 +348,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/laminator.png" alt="Tabber Stringers in India" title="Tabber Stringers in India" class="w-100">
+        <img src="img/stinger.png" alt="Tabber Stringers in India" title="Tabber Stringers in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Tabber Stringers</strong></h2>
