--- a/cell-testers.html
+++ b/cell-testers.html
@@ -347,11 +347,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 3A 512CH in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
+        <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 3A 512CH</h5>
-            <p class="card-text text-muted">High-performance Cylindrical Battery Production Lines designed for efficient assembly, welding, testing, and packaging. Delivering automation solutions for EV, ESS, and consumer electronics with precision and scalability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -363,11 +362,10 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 6A 512CH in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
+        <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 6A 512CH</h5>
-            <p class="card-text text-muted">Advanced Prismatic Battery Production Lines offering automated assembly, welding, testing, and sorting. Engineered for EVs, energy storage, and industrial applications with high efficiency and reliability</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -377,11 +375,11 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 10A 512CH in India"><img src="img/bess-container.png" class="card-img-top product-img" alt="5V 10A 512CH in India" title="5V 10A 512CH in India"></a>
+        <a href="#" title="5V 10A 512/256CH in India"><img src="img/5v-10a-512.png" class="card-img-top product-img" alt="5V 10A 512/256CH in India" title="5V 10A 512/256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">5V 10A 512CH</h5>
-            <p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>
+            <h5 class="card-title text-center">5V 10A 512/256CH</h5>
+            <!--<p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>-->
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -389,22 +387,40 @@
         </div>
       </div>
     </div>
-    <!-- Card 3 
+  </div>
+</div>
+
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS Testers"><img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India"></a>
+        <a href="#" title="5V 20A 256CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">BMS Testers</h5>
-            <p class="card-text text-muted">High-precision BMS testers for battery performance testing.</p>
+            <h5 class="card-title text-center">5V 20A 256CH</h5>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 30A 256CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 30A 256CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
