--- a/sorting-machine.html
+++ b/sorting-machine.html
@@ -343,15 +343,51 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/sorting-machine.png" alt="Sorting Machine in India" title="Sorting Machine in India" class="w-100">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 3A 512CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Sorting Machine</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 6A 512CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 10A 512/256CH in India"><img src="img/5v-10a-512.png" class="card-img-top product-img" alt="5V 10A 512/256CH in India" title="5V 10A 512/256CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 10A 512/256CH</h5>
+            <!--<p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>-->
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
   <!-- Footer -->
