--- a/cell-testers.html
+++ b/cell-testers.html
@@ -395,7 +395,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 20A 256CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
+        <a href="#" title="5V 20A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 20A 256CH</h5>
@@ -410,7 +410,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 30A 256CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
+        <a href="#" title="5V 30A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 30A 256CH</h5>
@@ -421,9 +421,39 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 6A 80CH in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="5V 6A 80CH in India" title="5V 6A 80CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 6A 80CH <br>(with temperature sensor)</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
+  <div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 20A 8CH in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 20A 8CH <br>(Neware)</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
