--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -366,7 +366,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
-            <p class="card-text text-muted">Premium Aluminum Foil for lithium-ion batteries, providing superior conductivity, corrosion resistance, and uniform thickness. Perfect for cathode current collectors in EV, ESS, and consumer applications.</p>
+            <p class="card-text text-muted">Premium Aluminum Foil for lithium-ion batteries, providing superior conductivity, corrosion resistance, and uniform thickness. Perfect for cathode current collectors in various consumer applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -421,7 +421,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Casing</h5>
-            <p class="card-text text-muted">Durable and high-quality Battery Casings for lithium-ion cells, providing protection, safety, and structural integrity for EV, ESS, and consumer battery applications.</p>
+            <p class="card-text text-muted">Durable and high-quality Battery Casings for lithium-ion cells, providing protection, safety, and structural integrity for various consumer battery applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
