--- a/cell-testers.html
+++ b/cell-testers.html
@@ -423,7 +423,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 6A 80CH in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="5V 6A 80CH in India" title="5V 6A 80CH in India"></a>
+        <a href="#" title="5V 6A 80CH in India"><img src="img/5v-6a-80.png" class="card-img-top product-img" alt="5V 6A 80CH in India" title="5V 6A 80CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 6A 80CH <br>(with temperature sensor)</h5>
@@ -441,7 +441,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 20A 8CH in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
+        <a href="#" title="5V 20A 8CH in India"><img src="img/5V-20A-8CH.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 20A 8CH <br>(Neware)</h5>
