--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -346,7 +346,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cylindrical Batteries Lines</h5>
-            <p class="card-text text-muted">High-performance Cylindrical Battery Production Lines designed for efficient assembly, welding, testing, and packaging. Delivering automation solutions for EV, ESS, and consumer electronics with precision and scalability.</p>
+            <p class="card-text text-muted">High-performance Cylindrical Battery Production Lines designed for efficient assembly, welding, testing, and packaging. Delivering automation solutions for various consumer electronics with precision and scalability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -415,7 +415,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
-            <p class="card-text text-muted">Reliable Battery Pack Testers for performance, safety, and durability validation. Ensuring accurate testing for EV, ESS, and consumer battery applications with advanced automation.</p>
+            <p class="card-text text-muted">Reliable Battery Pack Testers for performance, safety, and durability validation. Ensuring accurate testing for various consumer battery applications with advanced automation.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
