--- a/sorting-machine.html
+++ b/sorting-machine.html
@@ -347,10 +347,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
+        <a href="#" title="4 in one (18650 - 32700) in India"><img src="img/4-in-one.png" class="card-img-top product-img" alt="4 in one (18650 - 32700) in India" title="4 in one (18650 - 32700) in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">5V 3A 512CH</h5>
+            <h5 class="card-title text-center">4 in one (18650 - 32700)</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -362,24 +362,10 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
+        <a href="#" title="For 33140 in India"><img src="img/for-33140.png" class="card-img-top product-img" alt="For 33140 in India" title="For 33140 in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">5V 6A 512CH</h5>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 10A 512/256CH in India"><img src="img/5v-10a-512.png" class="card-img-top product-img" alt="5V 10A 512/256CH in India" title="5V 10A 512/256CH in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title text-center">5V 10A 512/256CH</h5>
-            <!--<p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>-->
+            <h5 class="card-title text-center">For 33140</h5>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
