--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -350,7 +350,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
-            <p class="card-text text-muted">High-quality Copper Foil for lithium-ion batteries, offering excellent conductivity, durability, and uniform thickness. Ideal for anode current collectors in EVs, ESS, and consumer batteries.</p>
+            <p class="card-text text-muted">High-quality Copper Foil for lithium-ion batteries, offering excellent conductivity, durability, and uniform thickness. Ideal for anode current collectors in for various consumer batteries.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
