--- a/cylindrical-batteries-lines.html
+++ b/cylindrical-batteries-lines.html
@@ -348,7 +348,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Assembly Lines</h5>
-            <p class="card-text text-muted">Complete Turnkey Assembly Lines for lithium-ion batteries, offering automated cell assembly, welding, testing, and packaging solutions for for various industrial applications.</p>
+            <p class="card-text text-muted">Complete Turnkey Assembly Lines for lithium-ion batteries, offering automated cell assembly, welding, testing, and packaging solutions for various industrial applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -365,7 +365,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
-            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion batteries, ensuring performance, safety, and quality validation for various consumer applications.</p>
+            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring performance, safety, and quality validation for various consumer applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -382,7 +382,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
-            <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise capacity, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
+            <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise IR, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
