--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -344,15 +344,27 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/prismatic-semi-auto.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
+        <img src="img/semi-2.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Semi Auto Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+        <h2><strong>Semi Auto Lines</strong></h2> <br>
+       <p>Indygreen Technology offers advanced Semi-Automatic Lines for Prismatic Battery Pack Solutions, engineered to provide the perfect balance between automation efficiency, precision control, and operational flexibility. These lines are thoughtfully designed to meet the evolving needs of modern lithium battery manufacturing, offering a seamless blend of technology and human oversight.</p> <br>
+       <p>Our semi-automatic systems integrate high-precision equipment for cell testing, laser welding, module assembly, and BMS integration—ensuring every battery pack is produced with superior quality, consistency, and reliability. By minimizing manual intervention, these lines help reduce human error while maintaining the adaptability required for customized production demands.</p>
     </div>
 </div>
 </div>
-
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-description col-lg-7 pr-4">
+        <h2><strong>Layout</strong></h2> <br>
+       <p>The layout consists of two main lines — the Module Line and the Pack Line — as shown in the layout. The Module Line has a total length of 24,220 mm, while the Pack Line extends to 27,816 mm, ensuring smooth and continuous manufacturing flow. A transfer crane is strategically placed between these two lines to efficiently transfer battery packs from the module section to the pack section.</p> <br>
+       <p>The line incorporates a Module Section (1200 × 800 mm) and a Pack Section (1900 × 1000 mm), designed for optimal space utilization and seamless integration. By combining advanced automation with skilled human operation, this setup ensures consistent quality, reduced cycle time, and enhanced productivity</p>
+    </div>
+     <div class="products-image col-lg-5">
+        <img src="img/semi-layout.png" alt="Layout" title="Layout" class="w-100">
+    </div>
+</div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
