--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -347,7 +347,7 @@
         <img src="img/semi-2.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Semi Auto Lines</strong></h2> <br>
+        <h2><strong>Semi Auto Lines</strong></h2> <br> <br>
        <p>Indygreen Technology offers advanced Semi-Automatic Lines for Prismatic Battery Pack Solutions, engineered to provide the perfect balance between automation efficiency, precision control, and operational flexibility. These lines are thoughtfully designed to meet the evolving needs of modern lithium battery manufacturing, offering a seamless blend of technology and human oversight.</p> <br>
        <p>Our semi-automatic systems integrate high-precision equipment for cell testing, laser welding, module assembly, and BMS integration—ensuring every battery pack is produced with superior quality, consistency, and reliability. By minimizing manual intervention, these lines help reduce human error while maintaining the adaptability required for customized production demands.</p>
     </div>
@@ -355,16 +355,39 @@
 </div>
 <div class="container py-5">
 <div class="product col-lg-12">
-    <div class="product-description col-lg-7 pr-4">
-        <h2><strong>Layout</strong></h2> <br>
+    <div class="product-description col-lg-8 pr-4">
+        <h2><strong>Layout</strong></h2> <br> <br>
        <p>The layout consists of two main lines — the Module Line and the Pack Line — as shown in the layout. The Module Line has a total length of 24,220 mm, while the Pack Line extends to 27,816 mm, ensuring smooth and continuous manufacturing flow. A transfer crane is strategically placed between these two lines to efficiently transfer battery packs from the module section to the pack section.</p> <br>
        <p>The line incorporates a Module Section (1200 × 800 mm) and a Pack Section (1900 × 1000 mm), designed for optimal space utilization and seamless integration. By combining advanced automation with skilled human operation, this setup ensures consistent quality, reduced cycle time, and enhanced productivity</p>
     </div>
-     <div class="products-image col-lg-5">
+     <div class="products-image col-lg-4">
         <img src="img/semi-layout.png" alt="Layout" title="Layout" class="w-100">
     </div>
 </div>
 </div>
+<div class="container">
+ 
+    <div class="app-sec col-lg-12">
+       <div class="app-image col-lg-6">
+      <img src="img/turnkey-applications.jpeg" alt="List Of Items" title="List Of Items">
+    </div>
+        <div class="application-sec product-description col-lg-6">
+        <h2>List Of Items</h2>
+          <ul>
+            <li>Cell Grading Machine</li>
+            <li>Cell Sorting Machine</li>
+            <li>Plasma Cleaning Machine</li>
+            <li>Pressing and Binding Machine</li>
+            <li>Polarity Detection Machine</li>
+            <li>Laser Welding Machine</li>
+            <li>BMS Testing Machines</li>
+            <li>EOL Testers</li>
+            <li>Battery Aging Machines</li>
+            <li>Conveyors</li>
+          </ul>
+        </div>
+      </div>
+  </div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
