--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -391,7 +391,7 @@
     </ul>
     </div>
     <div class="app-image col-lg-6">
-      <img src="img/turnkey-applications.jpeg" alt="">
+      <img src="img/turnkey-applications.jpeg" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
     </div>
     </div>
 </div>
